--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -170,6 +170,7 @@
         <service android:name=".records.RecorderService" />
 
         <provider
+            tools:replace="android:authorities"
             android:name="android.support.v4.content.FileProvider"
             android:authorities="com.greyeg.tajr"
             android:exported="false"
