--- a/build.gradle
+++ b/build.gradle
@@ -6,15 +6,16 @@ buildscript {
         google()
         jcenter()
         mavenCentral()
+        maven { url "http://jcenter.bintray.com"}
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.1'
+        classpath 'com.android.tools.build:gradle:3.4.0'
         classpath 'com.google.gms:google-services:4.2.0'
 
         // For Bintray publishing
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.2'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -24,6 +25,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+        jcenter{ url "http://jcenter.bintray.com/" }
+
         mavenCentral()
         // If you're using a version of Gradle lower than 4.1, you must instead use:
         maven {
