--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,18 +89,13 @@ dependencies {
     implementation 'com.facebook.fresco:fresco:1.9.0'
     implementation 'com.github.stfalcon:frescoimageviewer:0.5.0'
     implementation 'com.github.yalantis:ucrop:2.2.2'
-    implementation 'me.relex:photodraweeview:1.1.3'
     implementation 'id.zelory:compressor:2.1.0'
     implementation 'com.github.rafakob:DrawMe:0.1.6'
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.13.1'
-    // implementation 'com.github.esafirm.android-image-picker:rximagepicker:1.13.1'
     implementation 'com.squareup.okhttp3:okhttp:3.13.1'
-    implementation 'com.orhanobut:logger:2.1.1'
-    implementation 'org.greenrobot:eventbus:3.0.0'
     implementation 'pl.kitek:timertextview:0.0.2'
-    implementation 'com.github.pwittchen:swipe-rx2:0.3.0'
     implementation 'com.ebanx:swipe-button:0.8.3'
     implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
     implementation 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
@@ -113,9 +108,8 @@ dependencies {
     implementation 'org.ocpsoft.prettytime:prettytime:4.0.1.Final'
     implementation 'com.tapadoo.android:alerter:4.0.0'
     implementation 'com.evernote:android-job:1.2.6'
-    implementation 'com.google.android.gms:play-services-gcm:16.1.0'
     implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
-    implementation 'com.onesignal:OneSignal:[3.9.2, 3.99.99)'
+    implementation 'com.onesignal:OneSignal:3.10.8'
     implementation 'com.github.rygelouv:android-audio-sensei:0.1.2'
     implementation 'com.github.pwittchen:reactivenetwork-rx2:3.0.2'
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
@@ -124,7 +118,6 @@ dependencies {
     implementation 'com.airbnb.android:lottie:2.7.0'
     implementation 'io.mattcarroll.hover:hover:0.9.8'
     implementation 'com.github.clans:fab:1.6.4'
-    implementation 'de.greenrobot:eventbus:2.4.0'
 // Android plugin 3.0.0 or higher.
     implementation 'com.sangcomz:FishBun:0.8.8'
 
