--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.0'
         classpath 'com.google.gms:google-services:4.2.0'
+        classpath 'com.github.axet:gradle-android-dx:0.0.4'
 
         // For Bintray publishing
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
