--- a/app/build.gradle
+++ b/app/build.gradle
@@ -121,10 +121,10 @@ dependencies {
     implementation 'com.github.esafirm.android-image-picker:imagepicker:2.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
 
-    implementation 'com.github.axet:android-audio-library:1.0.167' // implementation project(':android-audio-library')
+    implementation 'com.github.axet:android-audio-library:1.0.169' // implementation project(':android-audio-library')
     implementation "org.apache.commons:commons-csv:1.5"
-//    assets('com.google.android.exoplayer:exoplayer:2.7.3')
-//            { exclude group: 'com.android.support' }
+    implementation('com.google.android.exoplayer:exoplayer:2.7.3')
+            { exclude group: 'com.android.support' }
 
 }
 apply plugin: 'com.github.axet.dxplugin'
