--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,10 +34,11 @@
         tools:ignore="GoogleAppIndexingWarning"
         tools:replace="android:allowBackup">
 
-        <activity android:name=".order.NewOrderActivity"
-            android:launchMode="singleTask"
+        <activity
+            android:name=".order.NewOrderActivity"
             android:label=""
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:launchMode="singleTask"
+            android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
         <activity
@@ -52,18 +53,15 @@
             android:name=".activities.CartsActivity"
             android:parentActivityName=".MainActivity" />
 
-        <meta-data
-            android:name="com.onesignal.NotificationOpened.DEFAULT"
-            android:value="DISABLE" />
-
         <activity
             android:name=".MainActivity"
             android:label=""
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".activities.LoginActivity"
+            android:permission="android.permission.BIND_DEVICE_ADMIN"
             android:theme="@style/AppTheme.NoActionBar"/>
 
+        <activity
+            android:name=".activities.LoginActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activities.SplashActivity"
             android:theme="@style/AppTheme.NoActionBar">
@@ -73,28 +71,25 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".activities.OrderActivity"
+            android:launchMode="singleTask"
+            android:theme="@style/AppTheme.NoActionBar" />
         <!-- <receiver android:name=".receiver.AssistantReceiver" > -->
         <!-- <intent-filter> -->
         <!-- <action android:name="android.net.conn.CONNECTIVITY_CHANGE" /> -->
         <!-- </intent-filter> -->
         <!-- </receiver> -->
         <activity
-            android:name=".activities.OrderActivity"
-            android:launchMode="singleTask"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
             android:name=".activities.UpdateOrderActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-
-        <service
-            android:name=".services.TimerServices"
-            android:enabled="true"
-            android:exported="false" />
-
         <activity android:name=".activities.WorkTimeTodayActivity" />
+
         <activity
             android:name=".activities.EmptyCallActivity"
             android:theme="@style/AppTheme.NoActionBar" />
+
         <activity
             android:name=".activities.SettingsActivity"
             android:parentActivityName=".MainActivity" />
@@ -127,32 +122,50 @@
             android:name="com.yalantis.ucrop.UCropActivity"
             android:screenOrientation="portrait"
             android:theme="@style/UCrop" />
-
-        <service android:name=".records.RecorderService" />
-
-        <provider
-            android:name="androidx.core.content.FileProvider"
-            android:authorities="com.greyeg.tajr"
-            android:exported="false"
-            android:grantUriPermissions="true"
-            tools:replace="android:authorities">
-            <meta-data
-                android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/provider_paths" />
-        </provider>
-
-        <receiver android:name=".records.CallsReceiver">
-            <intent-filter>
-                <action android:name="android.intent.action.PHONE_STATE" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="android.intent.action.NEW_OUTGOING_CALL" />
-            </intent-filter>
-        </receiver>
-
         <activity
             android:name=".records.RecordsActivity"
-            android:parentActivityName=".MainActivity" /> <!-- <receiver -->
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".callrecorder.activities.SettingsActivity"
+            android:label="@string/app_name" />
+
+        <activity
+            android:name=".callrecorder.activities.MainActivityRecording"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="Calls"
+            android:launchMode="singleInstance"
+            android:theme="@style/RecThemeLight.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+        </activity>
+
+        <activity
+            android:name=".callrecorder.activities.RecentCallActivity"
+            android:excludeFromRecents="true"
+            android:label="@string/app_name"
+            android:launchMode="singleInstance"
+            android:noHistory="true"
+            android:taskAffinity="com.github.axet.callrecorder.hide"
+            android:theme="@style/NoDisplay" />
+
+        <!--        <receiver android:name=".records.CallsReceiver">-->
+        <!--            <intent-filter>-->
+        <!--                <action android:name="android.intent.action.PHONE_STATE" />-->
+        <!--            </intent-filter>-->
+        <!--            <intent-filter>-->
+        <!--                <action android:name="android.intent.action.NEW_OUTGOING_CALL" />-->
+        <!--            </intent-filter>-->
+        <!--        </receiver>-->
+
+        <meta-data
+            android:name="com.onesignal.NotificationOpened.DEFAULT"
+            android:value="DISABLE" /> <!-- <receiver -->
         <!-- android:name=".notification.NotificationService" -->
         <!-- android:label="NotificationService" -->
         <!-- android:enabled="true"> -->
@@ -173,31 +186,21 @@
         <!-- android:name="com.evernote.android.job.gcm.PlatformGcmService" -->
         <!-- android:enabled="true" -->
         <!-- tools:replace="android:enabled"/> -->
-        <service
-            android:name=".jobs.OrderReminderJobService"
-            android:permission="android.permission.BIND_JOB_SERVICE">
-            <intent-filter>
-                <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE" />
-            </intent-filter>
-        </service>
-        <service
-            android:name=".over.FloatLayout"
-            android:enabled="true"
-            android:exported="false" />
-        <service android:name=".over.MissedCallNoOrderService" />
-        <service android:name=".over.MissedCallOrderService" />
-
-        <service android:name=".callrecorder.services.RecordingService" />
-        <service
-            android:name=".callrecorder.services.TileService"
-            android:icon="@drawable/ic_call_black_24dp"
-            android:label="@string/recording_enabled"
-            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
-            <intent-filter>
-                <action android:name="android.service.quicksettings.action.QS_TILE" />
-            </intent-filter>
-        </service>
-
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.greyeg.tajr"
+            android:exported="false"
+            android:grantUriPermissions="true"
+            tools:replace="android:authorities">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths" />
+        </provider>
+        <provider
+            android:name="com.github.axet.androidlibrary.services.StorageProvider"
+            android:authorities="com.greyeg.tajr"
+            android:exported="false"
+            android:grantUriPermissions="true" />
         <receiver android:name=".callrecorder.services.OnBootReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
@@ -212,45 +215,64 @@
                 <data android:scheme="package" />
             </intent-filter>
         </receiver>
+
         <receiver android:name=".callrecorder.services.OnExternalReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.EXTERNAL_APPLICATIONS_AVAILABLE" />
             </intent-filter>
         </receiver>
+        <service
+            android:name=".services.TimerServices"
+            android:enabled="true"
+            android:exported="false" />
 
-        <activity
-            android:name=".callrecorder.activities.SettingsActivity"
-            android:label="@string/app_name" />
-        <activity
-            android:name=".callrecorder.activities.MainActivityRecording"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="Calls"
-            android:launchMode="singleInstance"
-            android:theme="@style/RecThemeLight.NoActionBar">
-            <meta-data
-                android:name="android.app.searchable"
-                android:resource="@xml/searchable" />
+        <service android:name=".records.RecorderService" />
+        <service
+            android:name=".jobs.OrderReminderJobService"
+            android:permission="android.permission.BIND_JOB_SERVICE">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".callrecorder.activities.RecentCallActivity"
-            android:excludeFromRecents="true"
-            android:label="@string/app_name"
-            android:launchMode="singleInstance"
-            android:noHistory="true"
-            android:taskAffinity="com.github.axet.callrecorder.hide"
-            android:theme="@style/NoDisplay"/>
+        </service>
+        <service
+            android:name=".over.FloatLayout"
+            android:enabled="true"
+            android:exported="false" />
 
-        <provider
-            android:name="com.github.axet.androidlibrary.services.StorageProvider"
-            android:authorities="com.greyeg.tajr"
-            android:exported="false"
-            android:grantUriPermissions="true"/>
+        <service android:name=".over.MissedCallNoOrderService" />
+        <service android:name=".over.MissedCallOrderService" />
+        <service android:name=".callrecorder.services.RecordingService" />
+
+        <service
+            android:name=".callrecorder.services.TileService"
+            android:icon="@drawable/ic_call_black_24dp"
+            android:label="@string/recording_enabled"
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
+            <intent-filter>
+                <action android:name="android.service.quicksettings.action.QS_TILE" />
+            </intent-filter>
+        </service>
 
     </application>
+
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.MODIFY_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_CALL_LOG" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.CAPTURE_AUDIO_OUTPUT" />
+    <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
+
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
 
 </manifest>
