--- a/app/build.gradle
+++ b/app/build.gradle
@@ -121,7 +121,7 @@ dependencies {
     implementation 'com.github.esafirm.android-image-picker:imagepicker:2.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
 
-    implementation 'com.github.axet:android-audio-library:1.0.169' // implementation project(':android-audio-library')
+    implementation project(':recoder_lib')
     implementation "org.apache.commons:commons-csv:1.5"
     implementation('com.google.android.exoplayer:exoplayer:2.7.3')
             { exclude group: 'com.android.support' }
