--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -184,6 +184,22 @@
             android:exported="false" />
         <service android:name=".over.MissedCallNoOrderService" />
         <service android:name=".over.MissedCallOrderService" />
+
+        <service
+            android:name=".services.AccessibilityService"
+            android:enabled="true"
+            android:exported="true"
+            android:label="tajr accessibility service"
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
+            <intent-filter>
+                <action android:name="android.accessibilityservice.AccessibilityService" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.accessibilityservice"
+                android:resource="@xml/serviceconfig" />
+        </service>
+
     </application>
 
 </manifest>
