--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,6 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
@@ -247,11 +246,11 @@
 
         <activity
             android:name="com.github.axet.callrecorder.activities.RecorderSettingsActivity"
-            android:label="@string/app_name" />
+            android:label="@string/settings" />
         <activity
             android:name="com.github.axet.callrecorder.activities.RecorderMainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/app_name"
+            android:label="@string/recordes"
             android:launchMode="singleInstance"
             android:theme="@style/RecThemeLight.NoActionBar">
             <meta-data
@@ -261,7 +260,7 @@
         <activity
             android:name="com.github.axet.callrecorder.activities.RecentCallActivity"
             android:excludeFromRecents="true"
-            android:label="@string/app_name"
+            android:label="@string/recordes"
             android:launchMode="singleInstance"
             android:noHistory="true"
             android:taskAffinity="com.github.axet.callrecorder.hide"
