--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,5 +122,6 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
 
     implementation 'org.greenrobot:eventbus:3.1.1'
+    implementation 'com.github.abdularis:circularimageview:1.4'
 }
 apply plugin: 'com.google.gms.google-services'
