--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         <activity android:name=".order.NewOrderActivity"
             android:launchMode="singleTask"
             android:label=""
+            android:exported="true"
             android:theme="@style/AppTheme.NoActionBar" >
 
         </activity>
