--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,7 +86,7 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.jakewharton:butterknife:10.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
-    implementation 'com.facebook.fresco:fresco:1.9.0'
+    implementation 'com.facebook.fresco:fresco:2.0.0'
     implementation 'com.github.stfalcon:frescoimageviewer:0.5.0'
     implementation 'com.github.yalantis:ucrop:2.2.2'
     implementation 'id.zelory:compressor:2.1.0'
@@ -123,5 +123,9 @@ dependencies {
 
     implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'com.github.abdularis:circularimageview:1.4'
+
+    // Lifecycle components
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
+    annotationProcessor 'android.arch.lifecycle:compiler:1.1.1'
 }
 apply plugin: 'com.google.gms.google-services'
