--- a/app/build.gradle
+++ b/app/build.gradle
@@ -127,5 +127,7 @@ dependencies {
     // Lifecycle components
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     annotationProcessor 'android.arch.lifecycle:compiler:1.1.1'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+
 }
 apply plugin: 'com.google.gms.google-services'
