--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,8 @@ buildscript {
 
 apply plugin: 'com.onesignal.androidsdk.onesignal-gradle-plugin'
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
+
 
 repositories {
     maven { url 'https://maven.google.com' }
@@ -32,6 +34,9 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        debug{
+
         }
     }
     compileOptions {
@@ -128,6 +133,5 @@ dependencies {
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     annotationProcessor 'android.arch.lifecycle:compiler:1.1.1'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
-
 }
 apply plugin: 'com.google.gms.google-services'
