--- a/build.gradle
+++ b/build.gradle
@@ -7,12 +7,14 @@ buildscript {
         jcenter()
         mavenCentral()
         maven { url "http://jcenter.bintray.com"}
+        maven { url 'https://maven.fabric.io/public' }
 
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.0'
         classpath 'com.google.gms:google-services:4.2.0'
 
+        classpath 'io.fabric.tools:gradle:1.30.0'
         // For Bintray publishing
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
