--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,7 +79,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
@@ -96,10 +96,10 @@ dependencies {
     implementation 'com.github.yalantis:ucrop:2.2.2'
     implementation 'id.zelory:compressor:2.1.0'
     implementation 'com.github.rafakob:DrawMe:0.1.6'
-    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.13.1'
-    implementation 'com.squareup.okhttp3:okhttp:3.13.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.6.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.1.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.1.0'
     implementation 'pl.kitek:timertextview:0.0.2'
     implementation 'com.ebanx:swipe-button:0.8.3'
     implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
@@ -130,8 +130,13 @@ dependencies {
     implementation 'com.github.abdularis:circularimageview:1.4'
 
     // Lifecycle components
-    implementation 'android.arch.lifecycle:extensions:1.1.1'
-    annotationProcessor 'android.arch.lifecycle:compiler:1.1.1'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+    annotationProcessor 'androidx.arch.lifecycle:compiler:1.1.1'
+
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.6'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
 }
 apply plugin: 'com.google.gms.google-services'
