--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         google()
         jcenter()
         mavenCentral()
+        maven { url 'https://maven.google.com' }
         maven { url "http://jcenter.bintray.com"}
         maven { url 'https://maven.fabric.io/public' }
 
