--- a/app/build.gradle
+++ b/app/build.gradle
@@ -131,7 +131,7 @@ dependencies {
 
     // Lifecycle components
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
-    annotationProcessor 'androidx.arch.lifecycle:compiler:1.1.1'
+    annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.1.0'
 
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
