--- a/app/build.gradle
+++ b/app/build.gradle
@@ -138,5 +138,7 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.6'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+    implementation "androidx.lifecycle:lifecycle-reactivestreams:2.1.0"
+
 }
 apply plugin: 'com.google.gms.google-services'
