--- a/app/build.gradle
+++ b/app/build.gradle
@@ -139,6 +139,7 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.2.6'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
     implementation "androidx.lifecycle:lifecycle-reactivestreams:2.1.0"
+    implementation 'com.tapadoo.android:alerter:4.0.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
